--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==0.12
 django-oauth-toolkit==0.7.0
 django-openid-auth==0.5
 gdata==2.0.18
+gunicorn==18.0
 httplib2==0.8
 oauthlib==0.6.1
 python-dateutil==2.2
